# Model-Predictive-Control

./: .gitignore  CMakeLists.txt  control_trajectory.csv  main.cpp  mujoco_sim.py  nmpc_animation.py  nmpc_utils.cpp  nmpc_utils.hpp  state_trajectory.csv
mujoco_models/: pendulum_cart.xml
